<resources>
    <string name="app_name">Geometry</string>
    <string name="open_menu">open menu</string>
    <string name="solve_task">solve task</string>
    <string name="draw_circle">draw circle</string>
    <string name="draw_line">draw line</string>
    <string name="draw_move">draw move</string>
    <string name="draw_angle">draw angle</string>
    <string-array name="drawer_items">
        <item>Связаться</item>
        <item>Подробнее</item>
        <item>Посмотреть на карте</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="tutorial">Tutorial</string>
    <string name="default_lang">English</string>
</resources>
