<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GUI.BuilderFragment">

        <com.example.geometry.GUI.BuilderFigure
            android:id="@+id/builder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tools_layout" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/menu"
            android:contentDescription="@string/open_menu" />

        <ImageButton
            android:id="@+id/solve_button"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_calculator"
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/solve_task" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="28dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/back"
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/solve_task"
            android:layout_below="@+id/solve_button"/>


        <LinearLayout
            android:id="@+id/tools_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:background="@color/backgroundGrayColor">

            <ImageButton
                android:id="@+id/circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle"
                android:layout_margin="10dp"
                android:contentDescription="@string/draw_circle" />

            <ImageButton
                android:id="@+id/line"
                android:layout_width="52dp"
                android:layout_height="36dp"
                android:background="@drawable/line"
                android:layout_margin="10dp"
                android:contentDescription="@string/draw_line" />

            <ImageButton
                android:id="@+id/move"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/move"
                android:layout_margin="10dp"
                android:contentDescription="@string/draw_move" />

            <ImageButton
                android:id="@+id/angle"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/angle"
                android:layout_margin="10dp"
                android:contentDescription="@string/draw_angle" />

        </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        />


</RelativeLayout>